Switching to giscus

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,14 +44,21 @@ layout: default
         {{ content }}
     </div>
 
-    <script src="https://utteranc.es/client.js"
-        repo="https://github.com/epsilon537/boxlambda"
-        issue-term="pathname"
-        theme="github-light"
+    <script src="https://giscus.app/client.js"
+        data-repo="https://github.com/epsilon537/boxlambda"
+        data-repo-id="71555122"
+        data-category="[ENTER CATEGORY NAME HERE]"
+        data-category-id="[ENTER CATEGORY ID HERE]"
+        data-mapping="pathname"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="light"
+        data-lang="en"
         crossorigin="anonymous"
         async>
     </script>
-    
+   
     <a class="u-url"
        href="{{ page.url | relative_url }}"
        hidden></a>
