--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,11 +44,12 @@ layout: default
         {{ content }}
     </div>
 
+    
     <script src="https://giscus.app/client.js"
-        data-repo="https://github.com/epsilon537/boxlambda"
-        data-repo-id="473564418"
-        data-category="[ENTER CATEGORY NAME HERE]"
-        data-category-id="[ENTER CATEGORY ID HERE]"
+        data-repo="epsilon537/boxlambda"
+        data-repo-id="R_kgDOHDoFAg"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOHDoFAs4COvGw"
         data-mapping="pathname"
         data-reactions-enabled="1"
         data-emit-metadata="0"
