header layout changes

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,33 +1,48 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-<div class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
+  {%- include head.html -%}
 
-  {{ content }}
+  <body>
 
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
-    <ul class="post-list">
-      {%- for post in site.posts -%}
-      <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-    </ul>
+    {%- include home_header.html -%}
 
-  {%- endif -%}
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+	<div class="home">
+	  {%- if page.title -%}
+	  <h1 class="page-heading">{{ page.title }}</h1>
+	  {%- endif -%}
 
-</div>
+	  {{ content }}
+
+	  {%- if site.posts.size > 0 -%}
+	  <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+	  <ul class="post-list">
+	    {%- for post in site.posts -%}
+	    <li>
+              {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+              <span class="post-meta">{{ post.date | date: date_format }}</span>
+              <h3>
+		<a class="post-link" href="{{ post.url | relative_url }}">
+		  {{ post.title | escape }}
+		</a>
+              </h3>
+              {%- if site.show_excerpts -%}
+              {{ post.excerpt }}
+              {%- endif -%}
+	    </li>
+	    {%- endfor -%}
+	  </ul>
+
+	  {%- endif -%}
+
+	</div>
+      </div>
+    </main>
+
+    {%- include footer.html -%}
+
+  </body>
+
+</html>
